fixed gap between contact and footer divs

--- a/style.css
+++ b/style.css
@@ -5,10 +5,6 @@
   scroll-padding-top: 46px;
 }
 
-/* html {
-  scroll-padding-top: 46px;
-} */
-
 body {
   margin: 0 20rem;
   background-color: #f8f6f4;
@@ -119,13 +115,15 @@ body {
 }
 
 #contact {
-  margin: 10px 30px 10px;
+  
+  background-color: rgb(243, 240, 240);
 }
 
 #contact-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin: 10px 0 10px;
+  margin: 10px 0 0;
+  padding: 10px 30px 10px;
 }
 
 #contact-info {
